Fixing :bug: where multiple bash files are not sourced
+ Fixing :bug: where multiple bash files were not sourced when called
  with `*.bash`
+ Improving `.gitignore` file
+ Improving defaults/main.yml documentation

Renamed ps1 file and improved mix variables

+ Renamed 00-ps1.bash to ps1.bash
+ Improved mix.bash with better descriptions and by adding ctrl+l
  support in vim mode

Moving PY_COLORS to the mix file

+ Removing molecule alias
+ Enabling PY_COLORS as a global variable instead
of having it as an alias

Improving PS1 by adding toolbox support

+ Improved PS1 by having colors variables
+ Adding support for having toolbox in the prompt

Improved PS1 by appending values

Moving toolbox function to a static icon

+ Using a single static icon to simplify tollbox logic
+ Improved PS1 syntax
+ Using DroidSans Nerd Font mono in iconbox

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,9 +5,11 @@ dotbash_pkgs:
   - vim
   - vim-X11
   - emacs-nox
-#
-# define the install bash path default $HOME
+
+# define the install bash path. default $HOME
 install_root: "{{ ansible_facts['env']['HOME'] }}"
+
+# define the bash files to be installed
 bash_dirs:
   - name: ".bash"
     path: "{{ install_root }}"
@@ -25,6 +27,7 @@ bash_dirs:
     path: "{{ install_root }}"
     desc: "creates the {{ install_root }}/.bash/custom directory"
 
+# the list of files to be copied
 copy_files:
   - "alias"
   - "completions"
