--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
+### Ansible ###
+*.retry
+.galaxy_install_info
+
+### Vim ###
+# Swap
+[._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Temporary
+.netrwhist
+*~
+
+# custom local
 files/bashrc
 *vim*
