Adding support for yubikey hsm functions and more aliases
+ Adding custom functions to manage yubikey HSM
+ Adding gpg functions
+ Aditional git aliases
+ improving performance by gathering minimal facts

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 # tasks file for dotbash
+- name: "Including Env Setup"
+  ansible.builtin.include_tasks: env_setup.yml
+
 - name: "Including Installation"
   ansible.builtin.include_tasks: install.yml
 
